--- a/isis/src/control/apps/jigsaw/tsts/observation_mode_cholmod/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/observation_mode_cholmod/Makefile
@@ -29,7 +29,8 @@ commands:
 	  > $(OUTPUT)/obsmode_cholmod_bundleout.txt;
 	cat residuals.csv | sed 's/,[^,]*\/\([^,\/]*\.cub\)/,\1/g' \
 	  > $(OUTPUT)/obsmode_cholmod_residuals.csv;
-	cat bundleout_images.csv | sed 's/,[^,]*\/\([^,\/]*\.cub\)/,\1/g' \
+	cat bundleout_images.csv \
+	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  > $(OUTPUT)/obsmode_cholmod_bundleout_images.csv;
 	$(RM) residuals.csv bundleout_images.csv > /dev/null;
 	$(MV) bundleout_points.csv $(OUTPUT)/obsmode_cholmod_bundleout_points.csv > /dev/null;
