PROG more from 783
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4736 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/jigsaw/tsts/observation_mode_cholmod/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/observation_mode_cholmod/Makefile
@@ -1,12 +1,5 @@
 APPNAME = jigsaw
-# This test exercises the bundle adjustment of HiRISE images with observation mode, updating cubes.
-# sparse (cholmod) method, solving for angles (3rd degree polynomial), updating cubes.
-
-# The "cat bundleout.txt" command in these tests uses sed to do the following (in order):
-# 1. remove cube filename paths
-# 2. remove net filename paths
-# 3. remove digits beyond the fifth decimal place of decimal numbers
-# 4. remove date and time
+#This test exercises observation mode using the CHOLMOD solution on HiRISE images, with update=yes
 
 include $(ISISROOT)/make/isismake.tsts
 
@@ -26,12 +19,16 @@ commands:
 	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
-	  > $(OUTPUT)/obsmode_cholmod_bundleout.txt;
-	cat residuals.csv | sed 's/,[^,]*\/\([^,\/]*\.cub\)/,\1/g' \
-	  > $(OUTPUT)/obsmode_cholmod_residuals.csv;
-	cat bundleout_images.csv \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	  > $(OUTPUT)/obsmode_cholmod_bundleout_images.csv;
+	  > $(OUTPUT)/obsmode_cholmod_bundleout.txt
+	# The above command uses sed to do the following (in order):
+	# 1. remove cube filename paths
+	# 2. remove net filename paths
+	# 3. remove digits beyond the fifth decimal place of decimal numbers
+	# 4. remove date and time
+	cat residuals.csv | sed 's/,[^,]*\/\([^,\/]*\.cub\)/,\1/g'\
+	  > $(OUTPUT)/obsmode_cholmod_residuals.csv
+	cat bundleout_images.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  > $(OUTPUT)/obsmode_cholmod_bundleout_images.csv
 	$(RM) residuals.csv bundleout_images.csv > /dev/null;
 	$(MV) bundleout_points.csv $(OUTPUT)/obsmode_cholmod_bundleout_points.csv > /dev/null;
 	$(RM) $(OUTPUT)/cube.lis > /dev/null;
