PROG Fixed app tests to output the log as a pvl so the file name can be ignored in pvldiff. References #976
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4759 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/handmos/tsts/applog/Makefile
+++ b/isis/src/base/apps/handmos/tsts/applog/Makefile
@@ -3,36 +3,38 @@ APPNAME =handmos
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/ab102401.lev2.cub \
-	mosaic=$(OUTPUT)/handmosTruth2.cub \
-	priority=BAND \
-	insample=1 \
-	inline=1 \
-	inband=1 \
-	outsample=1 \
-	outline=1 \
-	outband=1 \
-	nlines=1000 \
-	nsamples=1000 \
-	nbands=5 \
-	create=yes \
-	propagate=false \
-	track=true \
-	type=KEYWORD \
-	keyname=FilterName \
-	keyvalue=RED \
-	criteria=LESSER \
-	highsaturation=false \
-	lowsaturation=false \
-	null=false \
-	-log=$(OUTPUT)/appLogOutput.txt      \
-	> /dev/null;                                                                  \
-	FIRST=`grep -m 1 -n ImageLocation $(OUTPUT)/appLogOutput.txt | sed 's/:.*//'`; \
-	LINECOUNT=`expr "$$FIRST" - 1`; \
-	sed -i -e 1,"$$LINECOUNT"d -e '/ ./!d' $(OUTPUT)/appLogOutput.txt; \
-	`grep -n StartLine $(OUTPUT)/appLogOutput.txt | sed 's/:.*//' > $(OUTPUT)/temp.txt`; \
-	LASTLINE=`sed '$$!d' $(OUTPUT)/temp.txt`; \
-	LAST=`expr "$$LASTLINE" + 1`; \
-	EOF=`wc -l $(OUTPUT)/appLogOutput.txt | sed 's/ .*//'`; \
-	sed -i -e "$$LAST","$$EOF"d $(OUTPUT)/appLogOutput.txt; \
+	$(APPNAME) from=$(INPUT)/ab102401.lev2.cub                                           \
+	mosaic=$(OUTPUT)/handmosTruth2.cub                                                   \
+	priority=BAND                                                                        \
+	insample=1                                                                           \
+	inline=1                                                                             \
+	inband=1                                                                             \
+	outsample=1                                                                          \
+	outline=1                                                                            \
+	outband=1                                                                            \
+	nlines=1000                                                                          \
+	nsamples=1000                                                                        \
+	nbands=5                                                                             \
+	create=yes                                                                           \
+	propagate=false                                                                      \
+	track=true                                                                           \
+	type=KEYWORD                                                                         \
+	keyname=FilterName                                                                   \
+	keyvalue=RED                                                                         \
+	criteria=LESSER                                                                      \
+	highsaturation=false                                                                 \
+	lowsaturation=false                                                                  \
+	null=false                                                                           \
+	-log=$(OUTPUT)/appLogOutput.pvl                                                      \
+	> /dev/null;                                                                         \
+	FIRST=`grep -m 1 -n ImageLocation $(OUTPUT)/appLogOutput.pvl | sed 's/:.*//'`;       \
+	LINECOUNT=`expr "$$FIRST" - 1`;                                                      \
+	sed -i -e 1,"$$LINECOUNT"d -e '/ ./!d' $(OUTPUT)/appLogOutput.pvl;                   \
+	`grep -n StartLine $(OUTPUT)/appLogOutput.pvl | sed 's/:.*//' > $(OUTPUT)/temp.txt`; \
+	LASTLINE=`sed '$$!d' $(OUTPUT)/temp.txt`;                                            \
+	LAST=`expr "$$LASTLINE" + 1`;                                                        \
+	EOF=`wc -l $(OUTPUT)/appLogOutput.pvl | sed 's/ .*//'`;                              \
+	sed -i -e "$$LAST","$$EOF"d $(OUTPUT)/appLogOutput.pvl;                              \
+	`echo 'End_Group' >> $(OUTPUT)/appLogOutput.pvl`;                                    \
+	`echo 'End' >> $(OUTPUT)/appLogOutput.pvl`;                                          \
 	$(RM) $(OUTPUT)/temp.txt; 
