PROG Fixed automos, handmos, and mapmos applog test to work on both linux and mac systems. References #976.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4766 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/mapmos/tsts/applog/Makefile
+++ b/isis/src/base/apps/mapmos/tsts/applog/Makefile
@@ -13,12 +13,14 @@ commands:
 	  > /dev/null;                                                                         \
 	  FIRST=`grep -m 1 -n ImageLocation $(OUTPUT)/appLogOutput.pvl | sed 's/:.*//'`;       \
 	  LINECOUNT=`expr "$$FIRST" - 1`;                                                      \
-	  sed -i -e 1,"$$LINECOUNT"d -e '/ ./!d' $(OUTPUT)/appLogOutput.pvl;                   \
-	  `grep -n StartLine $(OUTPUT)/appLogOutput.pvl | sed 's/:.*//' > $(OUTPUT)/temp.txt`; \
-	  LASTLINE=`sed '$$!d' $(OUTPUT)/temp.txt`;                                            \
+	  `cat $(OUTPUT)/appLogOutput.pvl | sed -e "1,$${LINECOUNT}d" -e '/ ./!d' > $(OUTPUT)/temp.pvl`;      \
+	  `cat $(OUTPUT)/temp.pvl > $(OUTPUT)/appLogOutput.pvl`;\
+	  `grep -n StartLine $(OUTPUT)/appLogOutput.pvl | sed 's/:.*//' > $(OUTPUT)/temp.pvl`; \
+	  LASTLINE=`sed '$$!d' $(OUTPUT)/temp.pvl`;                                            \
 	  LAST=`expr "$$LASTLINE" + 1`;                                                        \
-	  EOF=`wc -l $(OUTPUT)/appLogOutput.pvl | sed 's/ .*//'`;                              \
-	  sed -i -e "$$LAST","$$EOF"d $(OUTPUT)/appLogOutput.pvl;                              \
+	  EOF=`wc -l $(OUTPUT)/appLogOutput.pvl | sed 's/\(^ *\)\([0-9]*\)\( .*\$\)/\2/'`;     \
+	  cat $(OUTPUT)/appLogOutput.pvl | sed -e "$$LAST","$$EOF"d > $(OUTPUT)/temp.pvl;      \
+	  `cat $(OUTPUT)/temp.pvl > $(OUTPUT)/appLogOutput.pvl`;\
 	  `echo 'End_Group' >> $(OUTPUT)/appLogOutput.pvl`;                                    \
 	  `echo 'End' >> $(OUTPUT)/appLogOutput.pvl`;                                          \
-	$(RM) $(OUTPUT)/temp.txt;
+	$(RM) $(OUTPUT)/temp.pvl;
