--- a/isis/src/base/apps/automos/tsts/applog/Makefile
+++ b/isis/src/base/apps/automos/tsts/applog/Makefile
@@ -2,6 +2,15 @@ APPNAME = automos
 
 include $(ISISROOT)/make/isismake.tsts
 
+# Run test.
+# Find the first instance of ImageLocation and store the line number in FIRST.
+# The number of lines to delete from the start of the file is LINECOUNT = FIRST - 1.
+# Find the last intance of StartLine and store the line number in LASTLINE.
+# Find the last line number of the last line of the file (EOF).
+# Delete from LAST = LASTLINE + 1 to EOF.
+# Append End_Group and End onto the end of the pvl.
+# Generate outputlist and delete unecessary files.
+
 commands:
 	ls $(INPUT)/*.cub > $(OUTPUT)/inputlist.txt;                                           \
 	$(APPNAME) fromlist=$(OUTPUT)/inputlist.txt                                            \
@@ -13,15 +22,17 @@ commands:
 	  > /dev/null;                                                                         \
 	  FIRST=`grep -m 1 -n ImageLocation $(OUTPUT)/appLogOutput.pvl | sed 's/:.*//'`;       \
 	  LINECOUNT=`expr "$$FIRST" - 1`;                                                      \
-	  sed -i -e 1,"$$LINECOUNT"d -e '/ ./!d' $(OUTPUT)/appLogOutput.pvl;                   \
-	  `grep -n StartLine $(OUTPUT)/appLogOutput.pvl | sed 's/:.*//' > $(OUTPUT)/temp.txt`; \
-	  LASTLINE=`sed '$$!d' $(OUTPUT)/temp.txt`;                                            \
+	  `cat $(OUTPUT)/appLogOutput.pvl | sed -e "1,$${LINECOUNT}d" -e '/ ./!d' > $(OUTPUT)/temp.pvl`;                   \
+	  `cat $(OUTPUT)/temp.pvl > $(OUTPUT)/appLogOutput.pvl`;\
+	  `grep -n StartLine $(OUTPUT)/appLogOutput.pvl | sed 's/:.*//' > $(OUTPUT)/temp.pvl`; \
+	  LASTLINE=`sed '$$!d' $(OUTPUT)/temp.pvl`;                                            \
 	  LAST=`expr "$$LASTLINE" + 1`;                                                        \
-	  EOF=`wc -l $(OUTPUT)/appLogOutput.pvl | sed 's/ .*//'`;                              \
-	  sed -i -e "$$LAST","$$EOF"d $(OUTPUT)/appLogOutput.pvl;                              \
+	  EOF=`wc -l $(OUTPUT)/appLogOutput.pvl | sed 's/\(^ *\)\([0-9]*\)\( .*\$\)/\2/'`;      \
+	  cat $(OUTPUT)/appLogOutput.pvl | sed -e "$$LAST","$$EOF"d > $(OUTPUT)/temp.pvl;       \
+	  `cat $(OUTPUT)/temp.pvl > $(OUTPUT)/appLogOutput.pvl`;\
 	  `echo 'End_Group' >> $(OUTPUT)/appLogOutput.pvl`;                                    \
 	  `echo 'End' >> $(OUTPUT)/appLogOutput.pvl`;                                          \
 	  cat $(OUTPUT)/out.txt | sed "s#.*/##g" > $(OUTPUT)/outputlist.txt;                   \
 	  $(RM) $(OUTPUT)/out.txt;                                                             \
-	  $(RM) $(OUTPUT)/temp.txt;                                                            \
+	  $(RM) $(OUTPUT)/temp.pvl;                                                            \
 	  $(RM) $(OUTPUT)/inputlist.txt;
