--- a/isis/src/qisis/tsts/SquishTests/suites/suite_qnet/suite.conf
+++ b/isis/src/qisis/tsts/SquishTests/suites/suite_qnet/suite.conf
@@ -3,6 +3,6 @@ CWD=<AUT_path>
 HOOK_SUB_PROCESSES=false
 IMPLICITAUTSTART=0
 LANGUAGE=Python
-TEST_CASES="tst_Cnet exists" tst_case1
+TEST_CASES="tst_Cnet exists" "tst_Clean open and close" "tst_Control to Ground"
 VERSION=2
 WRAPPERS=Qt
