In autoregtemplate, removed the ECCENTRICITYRATIO, ECCENTRICITYTESTING, RESIDUALTESTING, and RESIDUALTOLERANCE parameters because they are no longer used due to the new sub-pixel registration algorithm that has replaced the previous surface model algorithm. Also because of the new algorithm, the minimum windowsize was changed from 3 to 5. The CHIPINTERPOLATOR parameter has been removed and the INTERPOLATORTYPE parameter has been renamed INTERP. The TO parameter has been changed to TOPVL. The references to the AutoReg class have been rewritten for better user understanding and helpful documentation has been added for some parameters. The documentation has been updated to reflect these changes. Fixes #1043.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4818 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/autoregtemplate/tsts/errors/Makefile
+++ b/isis/src/base/apps/autoregtemplate/tsts/errors/Makefile
@@ -6,7 +6,7 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaxCor \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -14,7 +14,7 @@ commands:
 	  ssamp=31 \
 	  sline=31 2> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  reduction=0 \
@@ -23,45 +23,42 @@ commands:
 	  ssamp=31 \
 	  sline=31 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
-	  interpolatortype=C \
+	  interp=C \
 	  psamp=15 \
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
-	  chipinterpolator=true \
-	  interpolatortype=NONE \
+	  interp=NONE \
 	  psamp=15 \
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
-	  chipinterpolator=true \
 	  psamp=15 \
 	  pline=15 \
 	  ssamp=3 \
 	  sline=3 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
-	  chipinterpolator=true  \
-	  interpolatortype=cubic \
+	  interp=cubic \
 	  psamp=15 \
 	  pline=15 \
 	  ssamp=17 \
 	  sline=16 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -70,7 +67,7 @@ commands:
 	  sline=31 \
 	  minimumz=0 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -79,7 +76,7 @@ commands:
 	  sline=31 \
 	  pvalidpercent=0 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -88,7 +85,7 @@ commands:
 	  sline=31 \
 	  ssubchipvalidpercent=0 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -98,7 +95,7 @@ commands:
 	  subpixel=true \
 	  dist=0 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -108,7 +105,7 @@ commands:
 	  subpixel=true \
 	  window=2 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -116,29 +113,23 @@ commands:
 	  ssamp=31 \
 	  sline=31 \
 	  subpixel=true \
-	  window=4 2>> $(OUTPUT)/error.txt > /dev/null;
+	  window=6 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 \
-	  subpixel=true \
-	  eccentricitytest=true \
-	  eccentricityratio=0 2>> $(OUTPUT)/error.txt > /dev/null;
+	  subpixel=true 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) \
-	  to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  topvl=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 \
-	  subpixel=true \
-	  residualtest=true \
-	  residualtol=-1 2>> $(OUTPUT)/error.txt > /dev/null;
-	cat $(OUTPUT)/error.txt | sed s+/usgs/cpkgs/isis3/testData/isis/src/base/apps/mat2cnet/tsts/errors/++g > $(OUTPUT)/errors.txt;
-	rm -f $(OUTPUT)/error.txt;
+	  subpixel=true > /dev/null;
 	rm -f $(OUTPUT)/autoregtemplateTruth.txt;
