--- a/isis/src/base/apps/autoregtemplate/tsts/noSubpixel/Makefile
+++ b/isis/src/base/apps/autoregtemplate/tsts/noSubpixel/Makefile
@@ -6,10 +6,9 @@ commands:
 	$(APPNAME) algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  subpixelaccuracy=false \
-	  chipinterpolator=t \
-	  interpolatortype=b \
+	  interp=b \
 	  psamp=15 \
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 \
-	  to=$(OUTPUT)/autoregtemplateTruth3.txt > /dev/null;
+	  topvl=$(OUTPUT)/autoregtemplateTruth3.txt > /dev/null;
