Added November's GUI test, which primarily covers qnet's point creation/registration capabilities and setting of sigma values. Fixes #1292.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4886 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/qisis/tsts/SquishTests/suites/suite_qnet/suite.conf
+++ b/isis/src/qisis/tsts/SquishTests/suites/suite_qnet/suite.conf
@@ -3,6 +3,6 @@ CWD=<AUT_path>
 HOOK_SUB_PROCESSES=false
 IMPLICITAUTSTART=0
 LANGUAGE=Python
-TEST_CASES="tst_Cnet exists" "tst_Clean open and close" "tst_Control to Ground"
+TEST_CASES="tst_Cnet exists" "tst_Clean open and close" "tst_Control to Ground" "tst_Auto Registration and Setting Sigmas"
 VERSION=2
 WRAPPERS=Qt
