Prog - Reverted revision #4890
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4891 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/spicefit/tsts/default/Makefile
+++ b/isis/src/base/apps/spicefit/tsts/default/Makefile
@@ -13,4 +13,4 @@ commands:
 	TO= $(OUTPUT)/botdrotation.txt NAME=BodyRotation > /dev/null;
 	tabledump FROM= $(OUTPUT)/moc2isisTruth.cub \
 	TO= $(OUTPUT)/sunposition.txt NAME=SunPosition > /dev/null;
-#	$(RM) $(OUTPUT)/moc2isisTruth.cub;
+	$(RM) $(OUTPUT)/moc2isisTruth.cub;
