In editlab, modified to update history in the labels and show appropriate files in the dialog box for choosing FROM parameter filenames. Fixes #655. Fixes #1084
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4927 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/editlab/tsts/delKey/Makefile
+++ b/isis/src/base/apps/editlab/tsts/delKey/Makefile
@@ -1,5 +1,7 @@
+# This test adds a new group, adds key1 and key2 to the group, and deletes key1
 APPNAME = editlab
 editlabTruth2.txt.IGNORELINES = ByteOrder TileSamples TileLines StartByte
+history.pvl.IGNORELINES = ExecutionDateTime HostName
 
 include $(ISISROOT)/make/isismake.tsts
 
@@ -8,12 +10,13 @@ commands:
 	  to=$(OUTPUT)/tempCube.cub \
 	  samples=1 \
 	  lines=13 \
-	  bands=13 > /dev/null; \
-	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addg grpname=NewGroup; \
-	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addkey grpname=NewGroup keyword=Key1 value=null; \
-	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addkey grpname=NewGroup keyword=Key2 value=value; \
-	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=delkey grpname=NewGroup keyword=Key1; \
-	catlab from=$(OUTPUT)/tempCube.cub >& $(OUTPUT)/tempLab1.txt; \
-	head -n 30 $(OUTPUT)/tempLab1.txt > $(OUTPUT)/editlabTruth2.txt; \
-	$(RM) $(OUTPUT)/tempCube.cub; \
+	  bands=13 > /dev/null;
+	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addg grpname=NewGroup;
+	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addkey grpname=NewGroup keyword=Key1 value=null;
+	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addkey grpname=NewGroup keyword=Key2 value=value;
+	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=delkey grpname=NewGroup keyword=Key1;
+	catlab from=$(OUTPUT)/tempCube.cub >& $(OUTPUT)/tempLab1.txt;
+	head -n 30 $(OUTPUT)/tempLab1.txt > $(OUTPUT)/editlabTruth2.txt;
+	cathist from=$(OUTPUT)/tempCube.cub >& $(OUTPUT)/history.pvl;
+	$(RM) $(OUTPUT)/tempCube.cub;
 	$(RM) $(OUTPUT)/tempLab1.txt;
