--- a/isis/src/base/apps/editlab/tsts/pvl/Makefile
+++ b/isis/src/base/apps/editlab/tsts/pvl/Makefile
@@ -1,3 +1,5 @@
+# This test edits a detached pvl label. It adds keyword Z to Numbers, 
+# sets keyword X, modifies keyword Z, and modifies keyword Y.
 APPNAME = editlab
 
 include $(ISISROOT)/make/isismake.tsts
