PROG. Fixed editlab Makefiles for tests to ignore keywords when creating history pvl. References #655.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4929 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/editlab/tsts/setKey/Makefile
+++ b/isis/src/base/apps/editlab/tsts/setKey/Makefile
@@ -5,7 +5,7 @@
 APPNAME = editlab
 editlabTruth1.txt.IGNORELINES = ByteOrder TileSamples TileLines StartByte
 tempLab1.txt.IGNORELINES = Bytes TileSamples TileLines StartByte
-history.pvl.IGNORELINES = ExecutionDateTime HostName
+history.pvl.IGNORELINES = ExecutionDateTime HostName IsisVersion ProgramVersion ProgramPath UserName
 
 include $(ISISROOT)/make/isismake.tsts
 
