PROG: Fixed test to not leave around intermediate files. This was a problem with the test, not the program. References #1053.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4936 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollopanstitcher/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollopanstitcher/tsts/default/Makefile
@@ -21,4 +21,4 @@ commands:
 	#form the histogram output grep the total valid Pixels
 	cat $(OUTPUT)/hist.txt | grep "Valid Pixels:" >> $(OUTPUT)/CubeStats.txt;
 	#remove the intermediate files
-	#$(RM) $(OUTPUT)/fx.cub $(OUTPUT)/hist.txt $(OUTPUT)/reduced8.cub
+	$(RM) $(OUTPUT)/fx.cub $(OUTPUT)/hist.txt $(OUTPUT)/reduced8.cub
