--- a/isis/src/qisis/tsts/SquishTests/suites/suite_qnet/suite.conf
+++ b/isis/src/qisis/tsts/SquishTests/suites/suite_qnet/suite.conf
@@ -1,8 +1,9 @@
 AUT=qnet
 CWD=<AUT_path>
+ENVVARS=envvars
 HOOK_SUB_PROCESSES=false
 IMPLICITAUTSTART=0
 LANGUAGE=Python
-TEST_CASES="tst_Cnet exists" "tst_Clean open and close" "tst_Control to Ground" "tst_Auto Registration and Setting Sigmas"
+TEST_CASES="tst_Cnet exists" "tst_Clean open and close" "tst_Control to Ground" "tst_Auto Registration and Setting Sigmas" "tst_Ground Without Radius Source" "tst_Network from Scratch"
 VERSION=2
 WRAPPERS=Qt
