Added SVD and Sparse least-squares solve methods to the equalizer application. Fixes #962.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4973 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/equalizer/tsts/default/Makefile
+++ b/isis/src/base/apps/equalizer/tsts/default/Makefile
@@ -6,6 +6,7 @@ commands:
 	$(APPNAME) fromlist=$(INPUT)/FromList.lst \
 	  holdlist=$(INPUT)/HoldList.lst \
 	  tolist=$(INPUT)/ToList.lst \
+	  solvemethod=qrd \
 	  > /dev/null;
 	$(MV) I00824006RDR.lev2.equ.cub $(OUTPUT)/equalizerTruth1.cub;
 	$(MV) I01523019RDR.lev2.equ.cub $(OUTPUT)/equalizerTruth2.cub;
