--- a/isis/src/base/apps/equalizer/tsts/noHoldApplyInputStats/Makefile
+++ b/isis/src/base/apps/equalizer/tsts/noHoldApplyInputStats/Makefile
@@ -1,13 +1,14 @@
+# This test does not hold any images and lets process=adjust.
+# This will apply the user entered input statistics. 
 APPNAME = equalizer
 
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) fromlist=$(INPUT)/FromList.lst \
-	  holdlist=$(INPUT)/HoldList.lst \
 	  tolist=$(INPUT)/ToList.lst \
-	  solvemethod=qrd \
+	  instats=$(INPUT)/instats.pvl \
+	  process=apply \
 	  > /dev/null;
 	$(MV) I00824006RDR.lev2.equ.cub $(OUTPUT)/equalizerTruth1.cub;
 	$(MV) I01523019RDR.lev2.equ.cub $(OUTPUT)/equalizerTruth2.cub;
-	$(MV) I02609002RDR.lev2.equ.cub $(OUTPUT)/equalizerTruth3.cub; 
