--- a/isis/src/base/apps/equalizer/tsts/noHoldCalculateSparse/Makefile
+++ b/isis/src/base/apps/equalizer/tsts/noHoldCalculateSparse/Makefile
@@ -6,9 +6,10 @@ APPNAME = equalizer
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) fromlist=$(INPUT)/FromList.lst \
+	$(LS) $(INPUT)/*.cub > $(OUTPUT)/FromList.lst;
+	$(APPNAME) fromlist=$(OUTPUT)/FromList.lst \
 	  outstats=$(OUTPUT)/outstats.pvl \
 	  process=calculate \
 	  solvemethod=sparse \
 	  > /dev/null;
-
+	$(RM) $(OUTPUT)/FromList.lst;
