In qmos, fixed a bug that caused qmos to sometimes freeze, in the grid tool, when the maximum longitude was set to a negative value. Fixes #1060.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4993 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/qisis/tsts/SquishTests/suites/suite_qmos/suite.conf
+++ b/isis/src/qisis/tsts/SquishTests/suites/suite_qmos/suite.conf
@@ -4,6 +4,6 @@ ENVVARS=envvars
 HOOK_SUB_PROCESSES=false
 IMPLICITAUTSTART=0
 LANGUAGE=Python
-TEST_CASES=tst_phaseAngle tst_movementArrowColors
+TEST_CASES=tst_phaseAngle tst_movementArrowColors tst_gridTool
 VERSION=2
 WRAPPERS=Qt
