--- a/isis/src/mro/apps/crism2isis/tsts/ddr/Makefile
+++ b/isis/src/mro/apps/crism2isis/tsts/ddr/Makefile
@@ -4,4 +4,10 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/frt00003e25_01_de156l_ddr1.lbl \
-	to=$(OUTPUT)/ddrtruth.cub > /dev/null;
+	to=$(OUTPUT)/ddrtruth.cub \
+	  | $(SED) 's+.*% Processed.*#+#+' \
+	  | grep -v "Processed" \
+	  | grep -v "Working" \
+	  | grep -v "Importing" \
+	  >& $(OUTPUT)/resultsLog.pvl;
+
