Changed default output to degrees of slope. Added error message for input DNs less than zero. Added BANDBIN group. Fixed #1316
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5029 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/slpmap/tsts/percent/Makefile
+++ b/isis/src/base/apps/slpmap/tsts/percent/Makefile
@@ -5,4 +5,8 @@ slpmapTruth.cub.TOLERANCE = .000001
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/test.cub to=$(OUTPUT)/slpmapTruth.cub > /dev/null;
+	$(APPNAME) from=$(INPUT)/test.cub to=$(OUTPUT)/slpmapTruth.cub output=percentslope > /dev/null;
+	catlab from=$(OUTPUT)/slpmapTruth.cub > $(OUTPUT)/slpmapTruth.pvl;
+	$(APPNAME) from=$(INPUT)/test.cub to=$(OUTPUT)/slpmapTruth2.cub pixres=user resolution=500 output=percentslope > /dev/null;\
+	catlab from=$(OUTPUT)/slpmapTruth2.cub > $(OUTPUT)/slpmapTruth2.pvl;
+
