--- a/isis/src/base/apps/slpmap/tsts/slope/Makefile
+++ b/isis/src/base/apps/slpmap/tsts/slope/Makefile
@@ -6,5 +6,7 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/test.cub to=$(OUTPUT)/slpmapTruth.cub output=slope > /dev/null;
+	catlab from=$(OUTPUT)/slpmapTruth.cub > $(OUTPUT)/slpmapTruth.pvl;
 	$(APPNAME) from=$(INPUT)/test.cub to=$(OUTPUT)/slpmapTruth2.cub output=slope units=radians > /dev/null;
-	$(APPNAME) from=$(INPUT)/test.cub to=$(OUTPUT)/slpmapTruth3.cub pixres=user resolution=500 > /dev/null;
+	catlab from=$(OUTPUT)/slpmapTruth2.cub > $(OUTPUT)/slpmapTruth2.pvl;
+
