Modified KernelDb to search for .conf files when reading system kernels. This will allow missions that need multiple types of ck database files to load all of the needed kernels. Fixes #924
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5030 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
+++ b/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
@@ -1,3 +1,4 @@
+# run spiceinit with nadir ck allowed to fill in gaps
 APPNAME = spiceinit
 
 error.txt.IGNORELINES = LeapSecond
@@ -6,7 +7,9 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	cp $(INPUT)/m1301260.cub $(OUTPUT)/nadirTruth.cub;
-	$(APPNAME) from=$(OUTPUT)/nadirTruth.cub attach=no cknadir=yes \
+	$(APPNAME) from=$(OUTPUT)/nadirTruth.cub \
+	attach=no \
+	cknadir=yes \
 	tspk='$$base/kernels/spk/de405.bsp' > /dev/null;
 	catlab from=$(OUTPUT)/nadirTruth.cub to=$(OUTPUT)/labels.pvl;
 	$(APPNAME) from=$(OUTPUT)/nadirTruth.cub attach=no \
