--- a/isis/src/base/apps/spiceinit/tsts/padding/Makefile
+++ b/isis/src/base/apps/spiceinit/tsts/padding/Makefile
@@ -1,3 +1,4 @@
+# run spiceinit with start and end pad parameters
 APPNAME = spiceinit
 
 include $(ISISROOT)/make/isismake.tsts
@@ -5,7 +6,9 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	cp $(INPUT)/v1545949478_1.cub $(OUTPUT)/v1545949478_1.cub;
 	$(APPNAME) FROM=$(OUTPUT)/v1545949478_1.cub \
-	STARTPAD=1.1 ENDPAD=0.5 ATTACH=FALSE \
+	STARTPAD=1.1 \
+	ENDPAD=0.5 \
+	ATTACH=FALSE \
 	fk='$$cassini/kernels/fk/cas_v40_usgs.tf' > /dev/null;
 	catlab FROM=$(OUTPUT)/v1545949478_1.cub > $(OUTPUT)/labels.pvl;
 	$(APPNAME) FROM=$(OUTPUT)/v1545949478_1.cub \
